--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     text-align: center;
     border: 2px solid rgb(69, 61, 61);
     border-radius: 5px;
-    
+    justify-content: center;
     box-shadow: 5px 5px 5px hsl(0, 22%, 25%);
     padding: 10px;
     max-width: 300px;
